Create Demo Instance 2

--- a/demo-instance-2.yaml
+++ b/demo-instance-2.yaml
@@ -3,5 +3,5 @@ apiVersion: aws.bose.platform/v1alpha1
 kind: XInstance
 metadata:
   name: demo-instance-2
-spec:XInstance-Composition.png
+spec:
   serverName: demo-instance-2
